api for per turbine
